--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,16 +8,58 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FoodOderingAndDeliveryApp">
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+       <activity
+           android:name=".ui.LoginActivity"
+            android:exported="true">
+           <intent-filter>
+               <action android:name="android.intent.action.MAIN" />
+
+               <category android:name="android.intent.category.LAUNCHER" />
+           </intent-filter>
+       </activity>
+
+            <activity android:name=".MainActivity"
+                android:exported="true"
+                />
+        <activity android:name=".ui.buyer.BuyersDashboardActivity"
+            android:exported="true" />
+        <activity android:name=".ui.forgotpassword"
+            android:exported="true"
+            />
+        <activity android:name=".ui.MainActivity"
+            android:exported="true"
+            />
+       <activity android:name=".ui.profile"
+           android:exported="true"/>
+        <activity android:name=".ui.rateapp"
+            android:exported="true"/>
+        <activity android:name=".ui.RegisterActivity"
+            android:exported="true"
+            />
+
+        <activity android:name=".ui.seller.AddFoodActivity"
+            android:exported="true"
+            />
+        <activity android:name=".ui.seller.SellerDashboardActivity"
+            android:exported="true"
+            />
+        <activity android:name=".ui.SetupActivity"
+            android:exported="true"
+            />
+        <activity android:name=".ui.termsandservice"
+            android:exported="true"
+            />
     </application>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
